--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,3 +3,16 @@ services:
   daemon:
     image: nickadam/backup-to-smb:1.0
     build: .
+    environment:
+      CRON_SCHEDULE: '* * * * *'
+      BACKUP_NAME: some application
+      RETENTION: 1
+      SMB_SHARE: \\server\share\folder
+      SMB_USER: smbusername
+      #SMB_PASS: smbpassword
+      SMB_PASS_FILE: /run/secrets/smbpassword
+    secrets:
+      - smbpassword
+secrets:
+  smbpassword:
+    external: true
